Some weird commit issues with a few files.  All should be well now.

--- a/README
+++ b/README
@@ -1,1 +1,47 @@
-Here's where some sweet README action would go if I still had energy for this.
+========================================================
+				README file for JERKTAR.  
+				
+					"It's a Program!"
+
+                     Version 0.01ish
+                    15 December 2010
+					  jerktar.com
+========================================================
+
+JERKTAR is a versioned web journal.  It's gonna need some
+scripts and crap to make it work.  And the early versions
+are going to be super personalized, since the journal's 
+code itself *is* the journal.  I like commandline stuff 
+these days, so maybe that's the direction this will take.
+
+I'm not sure.  I'm gonna write in lots of places though.
+Not always on purpose, or like, to be seen.  Blogs are
+pretty exhibitionistic really.  It's hard to keep a jour-
+nal online and not sorta be showing off.  In the old days,
+the days of superpants.com and christop.com and elly.org
+(elly's still got her presence up there, as of this wri-
+ting).  The web felt more like ham radio back then.  Every-
+body wasn't on there yet.  It was just a few voices in the
+dark.
+
+I'm not you know, dying for the old days.  Practically no-
+thing worked back then.  But it was just a different vibe.
+You know?  It felt like you were stumbling on something se-
+cret and precious.  Now that everybody has blogs, it's not
+really the same feeling.
+
+But the way some of those websites were laid out back in the
+day was amazing.  They had the weirdest interfaces and little
+javascript toys on them.  No navigation really.  Some of them
+were pre-search engine.  Archive.org has some of those saved,
+but not all.  And the story of how that stuff changed is kind
+of a compelling one to me.  I just wish there were a way to
+keep track of this medium.  Because the way data is presented
+matters.
+
+Also, this should be a good exercise in maintaining legacy code.
+
+I am a horrible nerd.  I've spent a whole night in a new city
+tweaking my bash_profile.  A little bit writing at the end
+I guess.  It's not too late to be awesome.  It's never too
+late. 
